config/samples/servicemesh.oci_v1beta1_virtualservice.yaml
#
# Copyright (c) 2022, Oracle and/or its affiliates. All rights reserved.
# Licensed under the Universal Permissive License v 1.0 as shown at http://oss.oracle.com/licenses/upl.
#

apiVersion: servicemesh.oci.oracle.com/v1beta1
kind: VirtualService
metadata:
  name: productpage
  namespace: bookinfo-demo
  labels:
    version: v1
spec:
  compartmentId: ocid1.compartment.oc1..aaaaaaaac3qtlvrctsjwjwil7h2yakpwteosoaxlilifou6gsbzwv6gu6i2q
  name: product
  description: This is Virtual Service
  mesh:
    ref:
      name: bookinfo-mesh
  defaultRoutingPolicy:
    type: UNIFORM
  hosts:
    - productpage.bookinfo.svc.cluster.local
  mtls:
    mode: STRICT
